# my_first_cli_app

./: Cargo.toml  big.txt  foo.txt  output -- big.txt [0]  output -- foo.txt [0]  output -- foo.txt [1]  output -- foo.txt [2]  param_cfg.json
src/: imply.rs  interface.rs  lib.rs  main.rs
src/cli_handler/: mod.rs  state_manager.rs
src/controllers/: calculator.rs  file.rs  mod.rs  utility.rs
src/file/: mod.rs  parameters.rs
src/interface/: components.rs  mod.rs  printer.rs  template_engine.rs  text_processing.rs
src/utility/: ErrorHandler.rs  mod.rs
tests/: common.rs  intergration_test.rs  smartpointer_test.rs
