[package]
name = "cpx2"
version = "0.1.0"
authors = ["lusamreth <somrethoverkill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.15"
rand = "0.7.3"
chrono = "0.4.11"
clap = "2.33"
console = "0.11.3"
regex = "1.3.7"