[package]
name = "cpx2"
version = "0.1.0"
authors = ["lusamreth <somrethoverkill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'  # Optimize for size.

[dependencies]
console = "0.11.3"
regex = "1.3.7"
termcolor = "1.1.0"
terminal_size = "0.1.12"
#json dependencies
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.6.0"
serde_json = "1.0.53"
